@@ -1,3 +1,10 @@
+2001-12-11  Fumitoshi UKAI  <ukai@debian.or.jp>
+
+	* [w3m-dev 02647]
+	* proto.h (arg_is): deleted
+	* etc.c (arg_is): ditto
+	* etc.c (searchAnchorArg): ditto
+
 2001-12-11  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
 
 	* [w3m-dev 02648] rewrite strCmp() with strcmp()
